--- a/startbootstrap-modern-business-gh-pages/css/styles.css
+++ b/startbootstrap-modern-business-gh-pages/css/styles.css
@@ -3646,7 +3646,7 @@ textarea.form-control-lg {
   --bs-nav-tabs-border-color: #dee2e6;
   --bs-nav-tabs-border-radius: 0.375rem;
   --bs-nav-tabs-link-hover-border-color: #e9ecef #e9ecef #dee2e6;
-  --bs-nav-tabs-link-active-color: #495057;
+  --bs-nav-tabs-link-active-color: #dc3545;
   --bs-nav-tabs-link-active-bg: #fff;
   --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #fff;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
@@ -4788,7 +4788,7 @@ textarea.form-control-lg {
   --bs-list-group-border-radius: 0.375rem;
   --bs-list-group-item-padding-x: 1rem;
   --bs-list-group-item-padding-y: 0.5rem;
-  --bs-list-group-action-color: #495057;
+  --bs-list-group-action-color: #dc3545;
   --bs-list-group-action-hover-color: #495057;
   --bs-list-group-action-hover-bg: #f8f9fa;
   --bs-list-group-action-active-color: #212529;
@@ -7632,6 +7632,8 @@ textarea.form-control-lg {
 
 .me-3 {
   margin-right: 1rem !important;
+  width: 25%;
+  height: 25%;
 }
 
 .me-4 {
